syntax = "proto3";
package communication;
option go_package=".;communication";
import "google/protobuf/timestamp.proto";
import "communication/deadline.proto";

import "communication/user.proto";
import "communication/item.proto";
import "communication/generic.proto";
import "communication/requests.proto";


message PriceEntity {
    int64 current = 1;
    int64 buyer = 2;
    int64 worker = 3;
    bool awaiting_approval = 4;
    string proposer_id = 5;
}

message ContractEntity {
    string id = 1;
    string invited_email = 11;
    string invite_password = 18;
    bool link_share = 22;

    UserNubEntity worker = 2;
    UserNubEntity buyer = 3;
    PriceEntity price = 4;
    repeated DeadlineEntity deadlines = 5;
    string current_deadline_id = 15;
    string title = 8;
    string summary = 6;
    uint32 stage = 9;

    bool universal_lock = 14;
    bool worker_approved = 12;
    bool buyer_approved = 13;
    repeated ItemEntity items = 7;
    string room_id = 10;

    bool disputed = 16;
    bool admin_requested = 17;

    string figma_link = 19;
    string figma_file_key = 21;
    bool figma_connected = 20;
    bool free_status = 23;
}

message ContractNub {
    string id = 1;
    string title = 2;
    string summary = 12;
    
    google.protobuf.Timestamp deadline = 3;
    int64 price = 4;
    uint32 stage = 5;
    uint32 user_type = 6;

    bool disputed = 7;
    bool admin_requested = 8;

    string worker_id = 9;
    string buyer_id = 10;

    string figma_link = 13;
    bool figma_connected = 14;
    repeated DeadlineNub deadlines = 11;
}

message InviteDataRequest {
    string id = 1;
    string secret = 2;
}

message ContractInviteNub {
    string id = 1;
    string invited_email = 11;
    bool link_share = 13;
    bool invited_user_in_system = 12;
    UserNubEntity worker = 2;
    UserNubEntity buyer = 3;
    PriceEntity price = 4;
    repeated DeadlineEntity deadlines = 5;
    string title = 8;
    string summary = 6;
    repeated ItemEntity items = 7;
}

message ContractNubSet {
    string user_id = 1;
    repeated ContractNub contract_nubs = 2;
}

message ContractCreateRequest {
    string user_id = 1;
    string title = 2;
    string summary = 3;
    string invited_email = 8;
    uint32 role = 9;
    PriceEntity price = 5;
    repeated DeadlineEntity deadlines = 6;
    repeated ItemEntity items = 7;
}

message ContractFinishCreationRequest {
    string contract_id = 1;
    string user_id = 2;
}

message ContractUpdateRequest {
    string contract_id = 1;
    string user_id = 2;
    string title = 3;
    string summary = 4;
    string invited_email = 5;
    bool link_share = 10;
    uint32 role = 6;
    PriceEntity price = 7;
    repeated DeadlineEntity deadlines = 8;
    repeated ItemEntity items = 9;
}

message ContractResponse {
    ContractEntity contract = 2;
    uint32 role = 3;
}

message ClaimContractRequest {
    string user_id = 1;
    string contract_id = 2;
    string password = 3;
}

message SignContractRequest {
    string user_id = 1;
    string contract_id = 2;
}
message SettleContractRequest {
    string user_id = 1;
    string contract_id = 2;
}

message ContractAdminSupport {
    string contract_id = 1;
    string user_id = 2;
}

message ContractToggleLockRequest {
    string user_id = 1;
    string contract_id = 2;
    bool contract_lock = 3;
}
message ContractReactLockRequest {
    string user_id = 1;
    string contract_id = 2;
    string message_id= 3;
    uint32 status = 4;
}

message ContractDeleteDraftRequest {
    string user_id = 1;
    string contract_id = 2;
}

message ContractEditResponse {}

message EmailChangeRequest {
    string user_id = 1;
    string contract_id = 2;
    string new_email = 3;
}
message EmailChangeResponse {
    string new_secret = 1;
}

message EmailResendRequest {
    string user_id = 1;
    string contract_id = 2;
}

message FigmaLinkRequest {
    string user_id = 1;
    string contract_id = 2;
    string figma_link = 3;
}

message FigmaItemRequest {
    string contract_id = 1;
    string user_id = 5;
    string item_id = 3;
    string component_id = 4;
}

message FigmaFileConnectRequest {
    string user_id = 1;
    string contract_id = 2;
    string figma_link = 3;
}

message SuggestPriceReq {
    string user_id = 1;
    string id = 2;
    int64 new_price = 3;
}
message ReactPriceReq {
    string user_id = 1;
    string id = 2;
    string message_id = 4;
    uint32 status = 3;
}
  

service Contract {

    rpc Create(ContractCreateRequest) returns (ContractResponse) {};
    rpc DeleteDraft(ContractDeleteDraftRequest) returns (ContractEditResponse) {};

    rpc UpdateDraft(ContractUpdateRequest) returns (ContractResponse) {};
    rpc FinishCreation(ContractFinishCreationRequest) returns (ContractResponse) {}

    rpc ChangeInviteEmail(EmailChangeRequest) returns (EmailChangeResponse) {};
    rpc ResendInviteEmail(EmailResendRequest) returns (NullResponse) {};

    rpc InviteQuery(InviteDataRequest) returns (ContractInviteNub) {};
    rpc Claim(ClaimContractRequest) returns (ContractResponse) {};
    rpc Sign(SignContractRequest) returns (ContractResponse) {};
    rpc Settle(SettleContractRequest) returns (ContractResponse) {};

    rpc QueryById(QueryByIdRequest) returns (ContractResponse) {};
    rpc QueryByUser(QueryByUserRequest) returns (ContractNubSet) {};
    rpc QueryByAdmin(QueryByUserRequest) returns (ContractNubSet) {};

    rpc SuggestPrice(SuggestPriceReq) returns (ContractEditResponse) {};
    rpc ReactPrice(ReactPriceReq) returns (ContractEditResponse) {};

    rpc ToggleLock(ContractToggleLockRequest) returns (ContractEditResponse) {};
    rpc ReactLock(ContractReactLockRequest) returns (ContractEditResponse) {};
    
    rpc RequestAdmin(ContractAdminSupport) returns (NullResponse) {};
    rpc ResolveAdmin(ContractAdminSupport) returns (NullResponse) {};

    rpc SetFigmaConnected(FigmaFileConnectRequest) returns (ContractEditResponse) {};
    rpc SetItemFigmaNodes(FigmaItemRequest) returns (ContractEditResponse) {};
}   